Change btn class font-size to fix contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,12 +146,12 @@ p {
 .btn {
   display: flex;
   justify-content: center;
-  height: 40px;
+  height: 50px;
   width: 150px;
   margin: auto;
   background-color: #E75A7C;
   border: none;
-  padding: 12px 28px;
+  padding: 15px 20px;
   text-align: center;
   font-size: 14px;
   border-radius: 8px;
@@ -160,7 +160,7 @@ p {
   font-family: "Roboto", sans-serif;
   color: #EEE5E9;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 1.2rem;
 }
 
 /* Separate class was made for next/finish button as questions/answers push it down on smaller screen sizes */
